core/src/com/lps/controller/syntax/JLPSSyntaxParser.java
// $ANTLR 3.5.2 JLPSSyntax.g 2016-05-10 16:23:26

package com.lps.controller.syntax;

import java.util.HashMap;
import java.util.HashSet;

import com.lps.model.Action;
import com.lps.model.And;
import com.lps.model.Arithmetic;
import com.lps.model.Clause;
import com.lps.model.Constant;
import com.lps.model.CycleHandler;
import com.lps.model.Database;
import com.lps.model.DPostDeclaration;
import com.lps.model.DSet;
import com.lps.model.Equal;
import com.lps.model.FactSet;
import com.lps.model.GoalSet;
import com.lps.model.GoalsList;
import com.lps.model.Initiator;
import com.lps.model.Not;
import com.lps.model.ReactiveRule;
import com.lps.model.ReactiveRuleSet;
import com.lps.model.Rule;
import com.lps.model.RuleSet;
import com.lps.model.SimpleSentence;
import com.lps.model.Terminator;
import com.lps.model.Unifiable;
import com.lps.model.Variable;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

/**
* @author Alexandre Camus
*/
@SuppressWarnings("all")
public class JLPSSyntaxParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "COMMENT_LINE", "CONSTANT", 
		"SYMBOL", "VARIABLE", "WS", "'!'", "'&'", "'('", "')'", "','", "'->'", 
		"'.'", "':'", "':-'", "'='", "'=='", "'Conditions'", "'Conflicts'", "'DSet'", 
		"'Database'", "'Domain Theory'", "'DomainTheory'", "'Dset'", "'Events'", 
		"'Facts'", "'Goals'", "'Lext'", "'Lint'", "'Macroactions'", "'Postconditions'", 
		"'Preconditions'", "'ReactiveRules'", "'Rules'", "'['", "']'", "'conditions'", 
		"'conflicts'", "'dSet'", "'database'", "'domain theory'", "'domainTheory'", 
		"'dset'", "'events'", "'facts'", "'goals'", "'initiates'", "'lext'", "'lint'", 
		"'macroactions'", "'postconditions'", "'preconditions'", "'reactiveRules'", 
		"'reactiverules'", "'rules'", "'terminates'", "'true'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int COMMENT=4;
	public static final int COMMENT_LINE=5;
	public static final int CONSTANT=6;
	public static final int SYMBOL=7;
	public static final int VARIABLE=8;
	public static final int WS=9;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public JLPSSyntaxParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public JLPSSyntaxParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return JLPSSyntaxParser.tokenNames; }
	@Override public String getGrammarFileName() { return "JLPSSyntax.g"; }


	HashMap<String, Variable> variables = new HashMap<String, Variable>();



	// $ANTLR start "unifiable"
	// JLPSSyntax.g:54:1: unifiable returns [Unifiable unifiable] : ( constant | variable | simpleSentence );
	public final Unifiable unifiable() throws RecognitionException {
		Unifiable unifiable = null;


		Constant constant1 =null;
		Variable variable2 =null;
		SimpleSentence simpleSentence3 =null;

		try {
			// JLPSSyntax.g:55:3: ( constant | variable | simpleSentence )
			int alt1=3;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==CONSTANT) ) {
				int LA1_1 = input.LA(2);
				if ( (LA1_1==SYMBOL||LA1_1==11||(LA1_1 >= 13 && LA1_1 <= 16)||LA1_1==62) ) {
					alt1=1;
				}
				else if ( (LA1_1==12) ) {
					alt1=3;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA1_0==VARIABLE) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// JLPSSyntax.g:55:7: constant
					{
					pushFollow(FOLLOW_constant_in_unifiable57);
					constant1=constant();
					state._fsp--;

					unifiable = constant1;
					}
					break;
				case 2 :
					// JLPSSyntax.g:56:7: variable
					{
					pushFollow(FOLLOW_variable_in_unifiable67);
					variable2=variable();
					state._fsp--;

					unifiable = variable2;
					}
					break;
				case 3 :
					// JLPSSyntax.g:57:7: simpleSentence
					{
					pushFollow(FOLLOW_simpleSentence_in_unifiable77);
					simpleSentence3=simpleSentence();
					state._fsp--;

					unifiable = simpleSentence3;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return unifiable;
	}
	// $ANTLR end "unifiable"



	// $ANTLR start "constant"
	// JLPSSyntax.g:60:1: constant returns [Constant constant] : CONSTANT ;
	public final Constant constant() throws RecognitionException {
		Constant constant = null;


		Token CONSTANT4=null;

		try {
			// JLPSSyntax.g:61:3: ( CONSTANT )
			// JLPSSyntax.g:61:7: CONSTANT
			{
			CONSTANT4=(Token)match(input,CONSTANT,FOLLOW_CONSTANT_in_constant98); 
			constant = new Constant((CONSTANT4!=null?CONSTANT4.getText():null));
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return constant;
	}
	// $ANTLR end "constant"



	// $ANTLR start "variable"
	// JLPSSyntax.g:64:1: variable returns [Variable variable] : VARIABLE ;
	public final Variable variable() throws RecognitionException {
		Variable variable = null;


		Token VARIABLE5=null;

		try {
			// JLPSSyntax.g:65:3: ( VARIABLE )
			// JLPSSyntax.g:65:7: VARIABLE
			{
			VARIABLE5=(Token)match(input,VARIABLE,FOLLOW_VARIABLE_in_variable119); 
			if (!this.variables.containsKey((VARIABLE5!=null?VARIABLE5.getText():null))) {
			          variable = new Variable((VARIABLE5!=null?VARIABLE5.getText():null));
			          this.variables.put((VARIABLE5!=null?VARIABLE5.getText():null), variable);
			      } else {
			          variable = this.variables.get((VARIABLE5!=null?VARIABLE5.getText():null));
			      }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return variable;
	}
	// $ANTLR end "variable"



	// $ANTLR start "parameters"
	// JLPSSyntax.g:74:1: parameters returns [ArrayList<Unifiable> parameters] :par1= unifiable ( ',' par2= unifiable )* ;
	public final ArrayList<Unifiable> parameters() throws RecognitionException {
		ArrayList<Unifiable> parameters = null;


		Unifiable par1 =null;
		Unifiable par2 =null;

		try {
			// JLPSSyntax.g:75:3: (par1= unifiable ( ',' par2= unifiable )* )
			// JLPSSyntax.g:75:7: par1= unifiable ( ',' par2= unifiable )*
			{
			parameters = new ArrayList<Unifiable>();
			pushFollow(FOLLOW_unifiable_in_parameters158);
			par1=unifiable();
			state._fsp--;

			parameters.add(par1);
			// JLPSSyntax.g:77:7: ( ',' par2= unifiable )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==14) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// JLPSSyntax.g:77:8: ',' par2= unifiable
					{
					match(input,14,FOLLOW_14_in_parameters169); 
					pushFollow(FOLLOW_unifiable_in_parameters175);
					par2=unifiable();
					state._fsp--;

					parameters.add(par2);
					}
					break;

				default :
					break loop2;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return parameters;
	}
	// $ANTLR end "parameters"



	// $ANTLR start "simpleSentence"
	// JLPSSyntax.g:80:1: simpleSentence returns [SimpleSentence simpleSentence] : constant '(' ( parameters )? ')' ;
	public final SimpleSentence simpleSentence() throws RecognitionException {
		SimpleSentence simpleSentence = null;


		Constant constant6 =null;
		ArrayList<Unifiable> parameters7 =null;

		try {
			// JLPSSyntax.g:81:3: ( constant '(' ( parameters )? ')' )
			// JLPSSyntax.g:81:7: constant '(' ( parameters )? ')'
			{
			Constant name; Unifiable[] parameters = new Unifiable[0];
			pushFollow(FOLLOW_constant_in_simpleSentence206);
			constant6=constant();
			state._fsp--;

			name = constant6;
			match(input,12,FOLLOW_12_in_simpleSentence216); 
			// JLPSSyntax.g:84:9: ( parameters )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==CONSTANT||LA3_0==VARIABLE) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// JLPSSyntax.g:84:10: parameters
					{
					pushFollow(FOLLOW_parameters_in_simpleSentence227);
					parameters7=parameters();
					state._fsp--;

					parameters = parameters7.toArray(parameters);
					}
					break;

			}

			match(input,13,FOLLOW_13_in_simpleSentence239); 
			simpleSentence = new SimpleSentence(name, parameters);
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return simpleSentence;
	}
	// $ANTLR end "simpleSentence"


	public static class initiator_return extends ParserRuleReturnScope {
		public Initiator initiator;
		public String factName;
	};


	// $ANTLR start "initiator"
	// JLPSSyntax.g:94:1: initiator returns [Initiator initiator, String factName] : 'initiates' '(' event= simpleSentence ',' fact= simpleSentence ')' ( ':-' and )? ;
	public final JLPSSyntaxParser.initiator_return initiator() throws RecognitionException {
		JLPSSyntaxParser.initiator_return retval = new JLPSSyntaxParser.initiator_return();
		retval.start = input.LT(1);

		SimpleSentence event =null;
		SimpleSentence fact =null;
		Clause and8 =null;

		try {
			// JLPSSyntax.g:95:3: ( 'initiates' '(' event= simpleSentence ',' fact= simpleSentence ')' ( ':-' and )? )
			// JLPSSyntax.g:95:7: 'initiates' '(' event= simpleSentence ',' fact= simpleSentence ')' ( ':-' and )?
			{
			match(input,50,FOLLOW_50_in_initiator268); 
			match(input,12,FOLLOW_12_in_initiator276); 
			pushFollow(FOLLOW_simpleSentence_in_initiator290);
			event=simpleSentence();
			state._fsp--;

			match(input,14,FOLLOW_14_in_initiator292); 
			pushFollow(FOLLOW_simpleSentence_in_initiator298);
			fact=simpleSentence();
			state._fsp--;

			match(input,13,FOLLOW_13_in_initiator306); 
			Clause body = null;
			// JLPSSyntax.g:100:7: ( ':-' and )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==18) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// JLPSSyntax.g:100:8: ':-' and
					{
					match(input,18,FOLLOW_18_in_initiator323); 
					pushFollow(FOLLOW_and_in_initiator325);
					and8=and();
					state._fsp--;

					body = and8;
					}
					break;

			}

			retval.initiator = new Initiator(event, fact, body);
			retval.factName = fact.getName();
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "initiator"


	public static class terminator_return extends ParserRuleReturnScope {
		public Terminator terminator;
		public String factName;
	};


	// $ANTLR start "terminator"
	// JLPSSyntax.g:105:1: terminator returns [Terminator terminator, String factName] : 'terminates' '(' event= simpleSentence ',' fact= simpleSentence ')' ( ':-' and )? ;
	public final JLPSSyntaxParser.terminator_return terminator() throws RecognitionException {
		JLPSSyntaxParser.terminator_return retval = new JLPSSyntaxParser.terminator_return();
		retval.start = input.LT(1);

		SimpleSentence event =null;
		SimpleSentence fact =null;
		Clause and9 =null;

		try {
			// JLPSSyntax.g:106:3: ( 'terminates' '(' event= simpleSentence ',' fact= simpleSentence ')' ( ':-' and )? )
			// JLPSSyntax.g:106:7: 'terminates' '(' event= simpleSentence ',' fact= simpleSentence ')' ( ':-' and )?
			{
			match(input,59,FOLLOW_59_in_terminator364); 
			match(input,12,FOLLOW_12_in_terminator372); 
			pushFollow(FOLLOW_simpleSentence_in_terminator386);
			event=simpleSentence();
			state._fsp--;

			match(input,14,FOLLOW_14_in_terminator388); 
			pushFollow(FOLLOW_simpleSentence_in_terminator394);
			fact=simpleSentence();
			state._fsp--;

			Clause body = null;
			match(input,13,FOLLOW_13_in_terminator412); 
			// JLPSSyntax.g:111:7: ( ':-' and )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==18) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// JLPSSyntax.g:111:8: ':-' and
					{
					match(input,18,FOLLOW_18_in_terminator421); 
					pushFollow(FOLLOW_and_in_terminator423);
					and9=and();
					state._fsp--;

					body = and9;
					}
					break;

			}

			retval.terminator = new Terminator(event, fact, body);
			retval.factName = fact.getName();
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "terminator"



	// $ANTLR start "arithmetic"
	// JLPSSyntax.g:121:1: arithmetic returns [Arithmetic expr] : '{' op1= unifiable SYMBOL op2= unifiable '}' ;
	public final Arithmetic arithmetic() throws RecognitionException {
		Arithmetic expr = null;


		Token SYMBOL10=null;
		Unifiable op1 =null;
		Unifiable op2 =null;

		try {
			// JLPSSyntax.g:122:3: ( '{' op1= unifiable SYMBOL op2= unifiable '}' )
			// JLPSSyntax.g:122:7: '{' op1= unifiable SYMBOL op2= unifiable '}'
			{
			match(input,61,FOLLOW_61_in_arithmetic464); 
			pushFollow(FOLLOW_unifiable_in_arithmetic470);
			op1=unifiable();
			state._fsp--;

			SYMBOL10=(Token)match(input,SYMBOL,FOLLOW_SYMBOL_in_arithmetic472); 
			pushFollow(FOLLOW_unifiable_in_arithmetic478);
			op2=unifiable();
			state._fsp--;

			match(input,62,FOLLOW_62_in_arithmetic480); 
			expr = new Arithmetic(op1, (SYMBOL10!=null?SYMBOL10.getText():null), op2);
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return expr;
	}
	// $ANTLR end "arithmetic"



	// $ANTLR start "equal"
	// JLPSSyntax.g:126:1: equal returns [Equal equal] : op1= variable '==' op2= unifiable ;
	public final Equal equal() throws RecognitionException {
		Equal equal = null;


		Variable op1 =null;
		Unifiable op2 =null;

		try {
			// JLPSSyntax.g:127:3: (op1= variable '==' op2= unifiable )
			// JLPSSyntax.g:127:7: op1= variable '==' op2= unifiable
			{
			pushFollow(FOLLOW_variable_in_equal511);
			op1=variable();
			state._fsp--;

			match(input,20,FOLLOW_20_in_equal513); 
			pushFollow(FOLLOW_unifiable_in_equal519);
			op2=unifiable();
			state._fsp--;

			equal = new Equal(op1, op2);
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return equal;
	}
	// $ANTLR end "equal"



	// $ANTLR start "term"
	// JLPSSyntax.g:131:1: term returns [Clause clause] : ( arithmetic | simpleSentence | equal | '(' and ')' );
	public final Clause term() throws RecognitionException {
		Clause clause = null;


		Arithmetic arithmetic11 =null;
		SimpleSentence simpleSentence12 =null;
		Equal equal13 =null;
		Clause and14 =null;

		try {
			// JLPSSyntax.g:132:3: ( arithmetic | simpleSentence | equal | '(' and ')' )
			int alt6=4;
			switch ( input.LA(1) ) {
			case 61:
				{
				alt6=1;
				}
				break;
			case CONSTANT:
				{
				alt6=2;
				}
				break;
			case VARIABLE:
				{
				alt6=3;
				}
				break;
			case 12:
				{
				alt6=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
			switch (alt6) {
				case 1 :
					// JLPSSyntax.g:132:7: arithmetic
					{
					pushFollow(FOLLOW_arithmetic_in_term546);
					arithmetic11=arithmetic();
					state._fsp--;

					clause = arithmetic11;
					}
					break;
				case 2 :
					// JLPSSyntax.g:133:7: simpleSentence
					{
					pushFollow(FOLLOW_simpleSentence_in_term556);
					simpleSentence12=simpleSentence();
					state._fsp--;

					clause = simpleSentence12;
					}
					break;
				case 3 :
					// JLPSSyntax.g:134:7: equal
					{
					pushFollow(FOLLOW_equal_in_term566);
					equal13=equal();
					state._fsp--;

					clause = equal13;
					}
					break;
				case 4 :
					// JLPSSyntax.g:135:7: '(' and ')'
					{
					match(input,12,FOLLOW_12_in_term576); 
					pushFollow(FOLLOW_and_in_term578);
					and14=and();
					state._fsp--;

					match(input,13,FOLLOW_13_in_term580); 
					clause = and14;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return clause;
	}
	// $ANTLR end "term"



	// $ANTLR start "negation"
	// JLPSSyntax.g:138:1: negation returns [Clause clause] : ( '!' )? term ;
	public final Clause negation() throws RecognitionException {
		Clause clause = null;


		Clause term15 =null;

		try {
			// JLPSSyntax.g:139:3: ( ( '!' )? term )
			// JLPSSyntax.g:139:7: ( '!' )? term
			{
			boolean flag = false;
			// JLPSSyntax.g:140:7: ( '!' )?
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==10) ) {
				alt7=1;
			}
			switch (alt7) {
				case 1 :
					// JLPSSyntax.g:140:8: '!'
					{
					match(input,10,FOLLOW_10_in_negation610); 
					flag = true;
					}
					break;

			}

			pushFollow(FOLLOW_term_in_negation616);
			term15=term();
			state._fsp--;

			clause = (flag) ? new Not(term15) : term15;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return clause;
	}
	// $ANTLR end "negation"



	// $ANTLR start "and"
	// JLPSSyntax.g:144:1: and returns [Clause clause] :op1= negation ( '&' op2= negation )* ;
	public final Clause and() throws RecognitionException {
		Clause clause = null;


		Clause op1 =null;
		Clause op2 =null;

		try {
			// JLPSSyntax.g:145:3: (op1= negation ( '&' op2= negation )* )
			// JLPSSyntax.g:145:7: op1= negation ( '&' op2= negation )*
			{
			boolean flag = false;
			      ArrayList<Clause> operands = new ArrayList<Clause>();
			pushFollow(FOLLOW_negation_in_and655);
			op1=negation();
			state._fsp--;

			operands.add(op1);
			// JLPSSyntax.g:147:51: ( '&' op2= negation )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==11) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// JLPSSyntax.g:147:52: '&' op2= negation
					{
					match(input,11,FOLLOW_11_in_and660); 
					pushFollow(FOLLOW_negation_in_and666);
					op2=negation();
					state._fsp--;

					flag = true; operands.add(op2);
					}
					break;

				default :
					break loop8;
				}
			}

			clause = (flag) ? new And(operands) : op1;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return clause;
	}
	// $ANTLR end "and"


